[package]
name = "voxel"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.12.1", features = ["dynamic_linking"] }
bevy_vulkano = { version = "0.14.0", features = ["gui"] }
log = "0.4.20"
vulkano = "0.34"
vulkano-shaders = "0.34"
vulkano-util = "0.34"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
